--- a/src/Common/Css/main.css
+++ b/src/Common/Css/main.css
@@ -7,13 +7,29 @@
 }
 .locate {
   width: 50px;
-  height: 24px;
   object-fit: cover;
-  margin-top: 16px;
+  margin-top: 40%;
+  position: absolute;
+  z-index: 98;
+  left: 97%;
 }
 .well {
+  background: whitesmoke;
   display: flex;
 }
+
 .search {
-  padding: 18px;
+  position: absolute;
+  z-index: 8;
+  height: 50px;
+  background: whiteSmoke;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 7px;
+}
+.child {
+  background-color: #ffff00;
+  width: 100px;
+  height: 100px;
 }
